--- a/content/lessons/05/Class-Coding-Lab/CCL-Functions.ipynb
+++ b/content/lessons/05/Class-Coding-Lab/CCL-Functions.ipynb
@@ -27,11 +27,11 @@
       },
       "cell_type": "code",
       "source": "import math\n\ndir(math)",
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 1,
+          "execution_count": 3,
           "data": {
             "text/plain": "['__doc__',\n '__file__',\n '__loader__',\n '__name__',\n '__package__',\n '__spec__',\n 'acos',\n 'acosh',\n 'asin',\n 'asinh',\n 'atan',\n 'atan2',\n 'atanh',\n 'ceil',\n 'copysign',\n 'cos',\n 'cosh',\n 'degrees',\n 'e',\n 'erf',\n 'erfc',\n 'exp',\n 'expm1',\n 'fabs',\n 'factorial',\n 'floor',\n 'fmod',\n 'frexp',\n 'fsum',\n 'gamma',\n 'gcd',\n 'hypot',\n 'inf',\n 'isclose',\n 'isfinite',\n 'isinf',\n 'isnan',\n 'ldexp',\n 'lgamma',\n 'log',\n 'log10',\n 'log1p',\n 'log2',\n 'modf',\n 'nan',\n 'pi',\n 'pow',\n 'radians',\n 'sin',\n 'sinh',\n 'sqrt',\n 'tan',\n 'tanh',\n 'trunc']"
           },
@@ -70,11 +70,11 @@
       },
       "cell_type": "code",
       "source": "math.factorial(5) #this is an example of \"calling\" the function with input 5. The output should be 120",
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 3,
+          "execution_count": 6,
           "data": {
             "text/plain": "120"
           },
@@ -131,7 +131,7 @@
       },
       "cell_type": "code",
       "source": "from IPython.display import display, HTML\n\nprint(\"Exciting:\")\ndisplay(HTML(\"<h1>Hello</h1>\"))\nprint(\"Boring:\")\nprint(\"Hello\")",
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,8 +141,8 @@
         {
           "output_type": "display_data",
           "data": {
-            "text/plain": "<IPython.core.display.HTML object>",
-            "text/html": "<h1>Hello</h1>"
+            "text/html": "<h1>Hello</h1>",
+            "text/plain": "<IPython.core.display.HTML object>"
           },
           "metadata": {}
         },
@@ -164,7 +164,7 @@
       },
       "cell_type": "code",
       "source": "def print_title(text):\n    '''\n    This prints text to IPython.display as H1\n    '''\n    return display(HTML(\"<H1>\" + text + \"</H1>\"))\n\ndef print_normal(text):\n    '''\n    this prints text to IPython.display as normal text\n    '''\n    return display(HTML(text))\n",
-      "execution_count": 10,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -178,19 +178,28 @@
       },
       "cell_type": "code",
       "source": "print_title(\"Area of a Rectangle\")\nlength = float(input(\"Enter length: \"))\nwidth = float(input(\"Enter width: \"))\narea = length * width\nprint_normal(\"The area is %.2f\" % area)\n",
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'HTML' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-e6568d85ac04>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint_title\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Area of a Rectangle\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mlength\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter length: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mwidth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter width: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0marea\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlength\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mwidth\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint_normal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The area is %.2f\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0marea\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-4-2c6bf5027fa5>\u001b[0m in \u001b[0;36mprint_title\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mThis\u001b[0m \u001b[0mprints\u001b[0m \u001b[0mtext\u001b[0m \u001b[0mto\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mH1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     '''\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mHTML\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"<H1>\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"</H1>\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mprint_normal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'HTML' is not defined"
-          ]
+          "output_type": "display_data",
+          "data": {
+            "text/html": "<H1>Area of a Rectangle</H1>",
+            "text/plain": "<IPython.core.display.HTML object>"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Enter length: 6\nEnter width: 8\n"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": "The area is 48.00",
+            "text/plain": "<IPython.core.display.HTML object>"
+          },
+          "metadata": {}
         }
       ]
     },
@@ -210,11 +219,11 @@
       },
       "cell_type": "code",
       "source": "!pip install emoji",
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
-          "text": "Collecting emoji\n\u001b[?25l  Downloading https://files.pythonhosted.org/packages/40/8d/521be7f0091fe0f2ae690cc044faf43e3445e0ff33c574eae752dd7e39fa/emoji-0.5.4.tar.gz (43kB)\n\u001b[K     |████████████████████████████████| 51kB 248kB/s eta 0:00:01\n\u001b[?25hBuilding wheels for collected packages: emoji\n  Building wheel for emoji (setup.py) ... \u001b[?25ldone\n\u001b[?25h  Created wheel for emoji: filename=emoji-0.5.4-cp35-none-any.whl size=43002 sha256=5c18156b424f5e8caca58439bd6cedc2f3c0b75d8f1e72ddeaf087fa4faff43c\n  Stored in directory: /home/nbuser/.cache/pip/wheels/2a/a9/0a/4f8e8cce8074232aba240caca3fade315bb49fac68808d1a9c\nSuccessfully built emoji\nInstalling collected packages: emoji\nSuccessfully installed emoji-0.5.4\n\u001b[33mWARNING: You are using pip version 19.3.1; however, version 20.0.2 is available.\nYou should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+          "text": "Collecting emoji\n\u001b[?25l  Downloading https://files.pythonhosted.org/packages/40/8d/521be7f0091fe0f2ae690cc044faf43e3445e0ff33c574eae752dd7e39fa/emoji-0.5.4.tar.gz (43kB)\n\u001b[K     |████████████████████████████████| 51kB 582kB/s eta 0:00:011\n\u001b[?25hBuilding wheels for collected packages: emoji\n  Building wheel for emoji (setup.py) ... \u001b[?25ldone\n\u001b[?25h  Created wheel for emoji: filename=emoji-0.5.4-cp35-none-any.whl size=43002 sha256=0fadffc62121e8f2d8edde5d91e05b702384d689bc43eed1ae593ac1fe58086a\n  Stored in directory: /home/nbuser/.cache/pip/wheels/2a/a9/0a/4f8e8cce8074232aba240caca3fade315bb49fac68808d1a9c\nSuccessfully built emoji\nInstalling collected packages: emoji\nSuccessfully installed emoji-0.5.4\n\u001b[33mWARNING: You are using pip version 19.3.1; however, version 20.0.2 is available.\nYou should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
           "name": "stdout"
         }
       ]
@@ -230,7 +239,7 @@
       },
       "cell_type": "code",
       "source": "# TODO: Run this\nimport emoji\nprint(emoji.emojize('Python is :thumbs_up:'))\nprint(emoji.emojize('But I thought this :lab_coat: was supposed to be about :credit_card: ??'))",
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,12 +275,18 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
-      "source": "## TODO: Write your code here\n",
-      "execution_count": null,
-      "outputs": []
+      "source": "## TODO: Write your code here\ncard = input(\"Enter credit card number: \")\ndigit = card[0]\nif digit == \"4\":\n    issuer = \"Visa\"\nelif digit == \"5\":\n    issuer = \"MasterCard\"\nelif digit == \"6\":\n    card_issuer = \"Discover\"\nelif digit == \"3\":\n    issuer = \"American Express\"\nelse:\n    issuer = \"Invalid\"\nprint(issuer)",
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Enter credit number: 5643346\nMasterCard\n"
+        }
+      ]
     },
     {
       "metadata": {},
@@ -280,11 +295,11 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
-      "source": "def CardIssuer(card):\n    '''This function takes a card number (card) as input, and returns the issuer name as output'''\n    ## TODO write code here they should be the same as lines 3-13 from the code above\n    \n    # the last line in the function should return the output\n    return issuer",
-      "execution_count": null,
+      "source": "def CardIssuer(card):\n    '''This function takes a card number (card) as input, and returns the issuer name as output'''\n    ## TODO write code here they should be the same as lines 3-13 from the code above\n    digit = card[0]\n    if digit == \"4\":\n        issuer = \"Visa\"\n    elif digit == \"5\":\n        issuer = \"MasterCard\"\n    elif digit == \"6\":\n        issuer = \"Discover\"\n    elif digit == \"3\":\n        issuer = \"American Express\"\n    else:\n        issuer = \"Invalid\"\n    # the last line in the function should return the output\n    return issuer",
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -294,12 +309,18 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
-      "source": "# Testing the CardIssuer() function\nprint(\"WHEN card='40123456789' We EXPECT CardIssuer(card) to return Visa ACTUAL\", CardIssuer(\"40123456789\"))\nprint(\"WHEN card='50123456789' We EXPECT CardIssuer(card) to return MasterCard ACTUAL\", CardIssuer(\"50123456789\"))\n\n## TODO: You write the remaining 3 tests, you can copy the lines and edit the values accordingly\n\n",
-      "execution_count": null,
-      "outputs": []
+      "source": "# Testing the CardIssuer() function\nprint(\"WHEN card='40123456789' We EXPECT CardIssuer(card) to return Visa ACTUAL\", CardIssuer(\"40123456789\"))\nprint(\"WHEN card='50123456789' We EXPECT CardIssuer(card) to return MasterCard ACTUAL\", CardIssuer(\"50123456789\"))\nprint(\"WHEN card='60123456789' We EXPECT CardIssuer(card) to return Discover ACTUAL\", CardIssuer(\"60123456789\"))\nprint(\"WHEN card='30123456789' We EXPECT CardIssuer(card) to return American Express ACTUAL\", CardIssuer(\"30123456789\"))\nprint(\"WHEN card='90123456789' We EXPECT CardIssuer(card) to return Invalid Card ACTUAL\", CardIssuer(\"90123456789\"))\n## TODO: You write the remaining 3 tests, you can copy the lines and edit the values accordingly\n\n",
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": "WHEN card='40123456789' We EXPECT CardIssuer(card) to return Visa ACTUAL Visa\nWHEN card='50123456789' We EXPECT CardIssuer(card) to return MasterCard ACTUAL MasterCard\nWHEN card='60123456789' We EXPECT CardIssuer(card) to return Discover ACTUAL Discover\nWHEN card='30123456789' We EXPECT CardIssuer(card) to return American Express ACTUAL American Express\nWHEN card='90123456789' We EXPECT CardIssuer(card) to return Invalid Card ACTUAL Invalid\n",
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {},
@@ -308,12 +329,18 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
-      "source": "# TODO Re-write the program here, calling our function.\n",
-      "execution_count": null,
-      "outputs": []
+      "source": "# TODO Re-write the program here, calling our function.\ncard = input(\"Enter credit card number: \")\nIssuer = CardIssuer(card)\nprint(Issuer)\n",
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Enter credit card number: 4365477\nVisa\n"
+        }
+      ]
     },
     {
       "metadata": {},
@@ -322,11 +349,11 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "# Todo: execute this code\n\ndef checkLuhn(card):\n    ''' This Luhn algorithm was adopted from the pseudocode here: https://en.wikipedia.org/wiki/Luhn_algorithm'''\n    total = 0\n    length = len(card)\n    parity = length % 2\n    for i in range(length):\n        digit = int(card[i])\n        if i%2 == parity:\n            digit = digit * 2\n            if digit > 9:\n                digit = digit -9\n        total = total + digit\n    return total % 10 == 0\n",
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -336,12 +363,18 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
-      "source": "#TODO Write your two tests here\n",
-      "execution_count": null,
-      "outputs": []
+      "source": "#TODO Write your two tests here\nprint(\"WHEN card='4539068867723438' We EXPECT checkLuhn(card) to return True ACTUAL\", checkLuhn(\"4539068867723438\"))\nprint(\"WHEN card='5511710799927921' We EXPECT checkLuhn(card) to return True ACTUAL\", checkLuhn(\"5511710799927921\"))",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": "WHEN card='4539068867723438' We EXPECT checkLuhn(card) to return True ACTUAL True\nWHEN card='5511710799927921' We EXPECT checkLuhn(card) to return True ACTUAL True\n",
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {},
@@ -350,17 +383,23 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
-      "source": "## TODO Write code here\n",
-      "execution_count": null,
-      "outputs": []
+      "source": "## TODO Write code here\ncard = \"\" \nwhile card != \"quit\":\n    card = input(\"Enter a credit card number: \")\n    if card != \"quit\":\n        if checkLuhn(card) == True:\n            Issuer = CardIssuer(card)\n            print(Issuer)\n        else:\n            print(\"Invalid card\")\n            \n   ",
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Enter a credit card number: 6011652074125065\nDiscover\nEnter a credit card number: 4916667753326850\nVisa\nEnter a credit card number: quit\n"
+        }
+      ]
     },
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "## Metacognition\n\nPlease answer the following questions. This should be a personal narrative, in your own voice. Answer the questions by double clicking on the question and placing your answer next to the Answer: prompt.\n\n\n1. Record any questions you have about this lab that you would like to ask in recitation. It is expected you will have questions if you did not complete the code sections correctly.  Learning how to articulate what you do not understand is an important skill of critical thinking. \n\nAnswer: \n\n2. What was the most difficult aspect of completing this lab? Least difficult?  \n\nAnswer: \n\n3. What aspects of this lab do you find most valuable? Least valuable?\n\nAnswer: \n\n4. Rate your comfort level with this week's material so far.   \n\n1 ==> I can do this on my own and explain how to do it.   \n2 ==> I can do this on my own without any help.   \n3 ==> I can do this with help or guidance from others. If you choose this level please list those who helped you.   \n4 ==> I don't understand this at all yet and need extra help. If you choose this please try to articulate that which you do not understand.   \n\nAnswer: \n\n"
+      "source": "## Metacognition\n\nPlease answer the following questions. This should be a personal narrative, in your own voice. Answer the questions by double clicking on the question and placing your answer next to the Answer: prompt.\n\n\n1. Record any questions you have about this lab that you would like to ask in recitation. It is expected you will have questions if you did not complete the code sections correctly.  Learning how to articulate what you do not understand is an important skill of critical thinking. \n\nAnswer: Why does the checkLuhn function return a boolean. I can't tell from the pseudocode.\n\n2. What was the most difficult aspect of completing this lab? Least difficult?  \n\nAnswer: Realizing that \"True\" the string is different True the boolean. I couldn't figure out why \"if checkLuhn(card) == \"True\": \", didnt work.\n\n3. What aspects of this lab do you find most valuable? Least valuable?\n\nAnswer: Being able to create your own function. And the least valauable would be the emoji.emojize function. But I guess it does help us understand how functions work.\n\n4. Rate your comfort level with this week's material so far.   \n\n1 ==> I can do this on my own and explain how to do it.   \n2 ==> I can do this on my own without any help.   \n3 ==> I can do this with help or guidance from others. If you choose this level please list those who helped you.   \n4 ==> I don't understand this at all yet and need extra help. If you choose this please try to articulate that which you do not understand.   \n\nAnswer: 2\n\n"
     },
     {
       "metadata": {
