--- a/content/lessons/08/Now-You-Code/NYC1-Funnynames.ipynb
+++ b/content/lessons/08/Now-You-Code/NYC1-Funnynames.ipynb
@@ -12,11 +12,11 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
-      "source": "# Step 2: write function\n# this function reads from \"NYC-funnynames.txt\" places the names in a list.\n# program should return a list of names\ndef read_names():\n    names = []\n    #todo write code here\n",
-      "execution_count": null,
+      "source": "# Step 2: write function\n# this function reads from \"NYC-funnynames.txt\" places the names in a list.\n# program should return a list of names\ndef read_names():\n    names = [] \n    file_name = \"NYC1-funnynames.txt\"\n    with open (file_name) as file:\n        for line in file:\n            names.append(line.strip())\n    return names",
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -28,18 +28,23 @@
     },
     {
       "metadata": {
-        "collapsed": true,
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
-      "source": "## Step 4: write entire program making sure to use read_names \n",
-      "execution_count": 2,
-      "outputs": []
+      "source": "## Step 4: write entire program making sure to use read_names \nmass = read_names()\nmass.sort()\nfor it in mass:\n    print(\"%s\" % (it))\n    ",
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": "Alma Frienzergon\nEuron Trouble\nKent Belevit\nMitch Again\nOliver Stuffismisson\nSandi Shores\nSarah Bellum\nWillie Pas-D'course\nYolanda Ismyland\n",
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "## Step 5: Questions\n\n1. Does writing the `read_names` function clarify the intent of the main program in step 4? Why or why not?\n\nAnswer: \n\n\n2. Find the `NYC-funnynames.txt` file in your `lessons/09` folder. Open the file and add the name `Euron Trouble` to the file, then save and close it. Re-run the program in step 4. Do you see the new name in the program output? Explain why or why not? \n\nAnswer:\n\n"
+      "source": "## Step 5: Questions\n\n1. Does writing the `read_names` function clarify the intent of the main program in step 4? Why or why not?\n\nAnswer: Yes, because it makes it easier to sort the quantity of names by putting them in a list. \n\n\n2. Find the `NYC-funnynames.txt` file in your `lessons/09` folder. Open the file and add the name `Euron Trouble` to the file, then save and close it. Re-run the program in step 4. Do you see the new name in the program output? Explain why or why not? \n\nAnswer: Yes, because a list can change. We can add things and delete things from  a list. Lists are mutable.\n"
     },
     {
       "metadata": {},
@@ -54,18 +59,6 @@
       "display_name": "Python 3",
       "language": "python"
     },
-    "language_info": {
-      "mimetype": "text/x-python",
-      "nbconvert_exporter": "python",
-      "name": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.5.4",
-      "file_extension": ".py",
-      "codemirror_mode": {
-        "version": 3,
-        "name": "ipython"
-      }
-    },
     "toc": {
       "base_numbering": 1,
       "nav_menu": {},
@@ -78,6 +71,18 @@
       "toc_position": {},
       "toc_section_display": false,
       "toc_window_display": false
+    },
+    "language_info": {
+      "mimetype": "text/x-python",
+      "nbconvert_exporter": "python",
+      "name": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.5.4",
+      "file_extension": ".py",
+      "codemirror_mode": {
+        "version": 3,
+        "name": "ipython"
+      }
     }
   },
   "nbformat": 4,
